<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <data>

        <variable
                name="accountSelectionActivity"
                type="co.yap.app.AccountSelectionActivity"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/margin_medium">


        <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/logo"
                android:id="@+id/ivLogo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_medium_large"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvTagLine"
        />

        <TextView
                android:id="@+id/tvTagLine"
                android:text="@string/screen_home_display_text_tag_line"
                style="@style/ALargeGrey"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        />
        <ImageView
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/group"
                android:id="@+id/ivOnboarding"
                app:layout_constraintTop_toBottomOf="@+id/tvTagLine"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                app:layout_constraintHorizontal_bias="0.49"/>
        <TextView
                android:text="@string/screen_home_display_text_account_selection"
                style="@style/ARegularGrey"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDisplayTestAccountSelection"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ivOnboarding"/>

        <!--android:text="@{accountSelectionActivity.btnTxt}"-->

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:weightSum="1"
                      tools:ignore="MissingConstraints"
                      android:layout_marginLeft="@dimen/margin_medium"
                      android:layout_marginRight="@dimen/margin_medium"
                      app:layout_constraintTop_toBottomOf="@+id/tvDisplayTestAccountSelection"
                      android:id="@+id/layoutButtons">

            <co.yap.yapcore.CoreButton
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPersonal"
                    style="@style/RectangleBtnStyle"
                    android:enabled="true"
                    app:btn_text="@string/screen_home_button_personal_text"
                    android:paddingEnd="@dimen/margin_xl"
                    tools:ignore="MissingConstraints"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_normal_large"
                    android:paddingBottom="@dimen/margin_normal_large"/>

            <co.yap.yapcore.CoreButton
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:layout_height="wrap_content"
                    style="@style/RectangleBtnStyle"
                    app:btn_text="@string/screen_home_button_business_text"
                    android:id="@+id/btnBusiness"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintStart_toEndOf="@+id/btnPersonal"
                    android:layout_marginStart="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:paddingTop="@dimen/margin_normal_large"
                    android:paddingBottom="@dimen/margin_normal_large"
            />

        </LinearLayout>

        <TextView
                android:text="@string/screen_home_display_text_sign_in"
                style="@style/ARegularGrey"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                android:id="@+id/tvDisplayTextSignIn"
                tools:ignore="MissingConstraints"
                android:layout_marginTop="@dimen/margin_medium_large"
                app:layout_constraintTop_toBottomOf="@+id/layoutButtons"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>